--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "listing-finder-agent",
-  "version": "1.0.0",
-  "type": "module",
+  "version": "1.0.1",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "ts-node --transpile-only src/server.ts",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/server.js"
   },
+  "engines": {
+    "node": ">=20"
+  },
   "dependencies": {
-    "@openai/agents": "^0.4.0",
+    "@openai/agents": "^0.1.10",
+    "@openai/agents-openai": "^0.1.10",
     "@openai/guardrails": "^0.2.0",
     "express": "^4.19.2",
     "openai": "^4.58.1",
