Refactor workflow to remove unavailable OpenAI dependencies

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "skipLibCheck": true,
     "resolveJsonModule": true,
     "noEmitOnError": false,
-    "lib": ["ES2022", "DOM"]
+    "lib": ["ES2022", "DOM"],
+    "typeRoots": ["./types"]
   },
   "include": ["src"]
 }
