--- a/package.json
+++ b/package.json
@@ -4,23 +4,13 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "ts-node --transpile-only src/server.ts",
+    "dev": "npm run build && npm start",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/server.js"
   },
   "engines": {
     "node": ">=20"
   },
-  "dependencies": {
-    "@openai/agents": "^0.1.10",
-    "@openai/agents-openai": "^0.1.10",
-    "@openai/guardrails": "^0.2.0",
-    "express": "^4.19.2",
-    "openai": "^4.58.1",
-    "zod": "^3.23.8"
-  },
-  "devDependencies": {
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
-  }
+  "dependencies": {},
+  "devDependencies": {}
 }
